force-app/main/default/objects/FF_Person_Account__c/FF_Person_Account__c.object-meta.xml
<CustomObject>
    <description>Hold information pertaining to an individual</description>
    <label>FF Accounts</label>
    <nameField>
        <label>FF Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FF Person Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>