force-app/main/default/objects/FF_Person_Account__c/fields/Account_Contact_Relationship_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Relationship_ID__c</fullName>
    <description>Holds the ID of the account contact relationship between this Person and the Household. There is no native functionality to add a lookup, so i have had to create a text field. This will not be visible to internal users, and is only used in a flow to identify if a person account has been linked by the internal user.</description>
    <label>Account Contact Relationship ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>