force-app/main/default/objects/FF_Person_Account__c/fields/Additional_outgoings__c.field-meta.xml
<CustomField>
    <fullName>Additional_outgoings__c</fullName>
    <inlineHelpText>Excluding mortgage payments, childcare cost and rent.</inlineHelpText>
    <label>Additional outgoings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>