force-app/main/default/objects/FF_Person_Account__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <description>The city that is included in the address.</description>
    <label>Address: city</label>
    <length>40</length>
    <type>Text</type>
</CustomField>