force-app/main/default/objects/FF_Person_Account__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <description>The country that is included in the address.</description>
    <label>Address: country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>