force-app/main/default/objects/FF_Person_Account__c/fields/Address_County__c.field-meta.xml
<CustomField>
    <fullName>Address_County__c</fullName>
    <description>The county that is included in the address.</description>
    <label>Address: county</label>
    <length>40</length>
    <type>Text</type>
</CustomField>