force-app/main/default/objects/FF_Person_Account__c/fields/Address_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Post_Code__c</fullName>
    <description>The postcode that is included in the address.</description>
    <label>Address: postcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>