force-app/main/default/objects/FF_Person_Account__c/fields/Address_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_Address__c</fullName>
    <description>Mapped to: Person Account - Postal address</description>
    <label>Address: street address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>