force-app/main/default/objects/FF_Person_Account__c/fields/AO_Frequency__c.field-meta.xml
<CustomField>
    <fullName>AO_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <description>Additional Outgoings frequency</description>
    <label>AO Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>