force-app/main/default/objects/FF_Person_Account__c/fields/Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Name__c</fullName>
    <description>The name of the owner of the bank account.</description>
    <label>Bank account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>