force-app/main/default/objects/FF_Person_Account__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>The account number for their bank.</description>
    <label>Bank account number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>