force-app/main/default/objects/FF_Person_Account__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>The name of the bank who holds their bank account.</description>
    <label>Bank name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>