force-app/main/default/objects/FF_Person_Account__c/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <description>The sort code for their bank account.</description>
    <label>Bank sort code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>