force-app/main/default/objects/FF_Person_Account__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <description>The amount of cash they have.</description>
    <label>Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>