force-app/main/default/objects/FF_Person_Account__c/fields/Cash_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cash_Frequency__c</fullName>
    <defaultValue>(&quot;Monthly&quot;)</defaultValue>
    <label>Cash Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>