force-app/main/default/objects/FF_Person_Account__c/fields/Confirm_Bank_Detail_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Bank_Detail_Change_Request__c</fullName>
    <description>Has the bank details change request been confirmed? This will either be &apos;Yes&apos; or &apos;Reject&apos;.</description>
    <label>Confirm bank details change request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>