force-app/main/default/objects/FF_Person_Account__c/fields/Cost_of_Childcare__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Childcare__c</fullName>
    <description>The associated cost of childcare.</description>
    <label>Cost of childcare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>