force-app/main/default/objects/FF_Person_Account__c/fields/Cost_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Education__c</fullName>
    <description>The associated cost for any education.</description>
    <label>Cost of education</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>