force-app/main/default/objects/FF_Person_Account__c/fields/Cost_of_Education_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Education_Frequency__c</fullName>
    <defaultValue>(&quot;Annually&quot;)</defaultValue>
    <description>The frequency of any childcare costs.</description>
    <label>Cost of education frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>