force-app/main/default/objects/FF_Person_Account__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <description>This is their current country of residence.</description>
    <label>Country of residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>