force-app/main/default/objects/FF_Person_Account__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>The date of birth.</description>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>