force-app/main/default/objects/FF_Person_Account__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <description>Who deleted this, was it the client or staff?</description>
    <label>Deleted by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deleted by Client</fullName>
            </value>
            <value>
                <fullName>Deleted by Internal User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>