force-app/main/default/objects/FF_Person_Account__c/fields/Different_Address__c.field-meta.xml
<CustomField>
    <fullName>Different_Address__c</fullName>
    <description>The address in the FF record does not match the address we hold on file.</description>
    <formula>AND(
 NOT(ISBLANK(Person_Account__c)),
 Person_Account__r.Account_record_type_mimic__c = &quot;Person Account&quot;, 
OR(
  Person_Account__r.ShippingPostalCode &lt;&gt;  Address_Post_Code__c, 
 Person_Account__r.ShippingStreet &lt;&gt; Address_Street_Address__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The address in the FF record does not match the address we hold on file.</inlineHelpText>
    <label>Different address</label>
    <type>Checkbox</type>
</CustomField>