force-app/main/default/objects/FF_Person_Account__c/fields/Different_Bank_Details__c.field-meta.xml
<CustomField>
    <fullName>Different_Bank_Details__c</fullName>
    <description>This will be true if the new bank details differ from the ones held on the Person Account. But only if we actually hold bank details. If we don&apos;t have any details this will always show as false, but have just received them, this will show as false.</description>
    <formula>AND(

NOT(
AND(
ISBLANK(Person_Account__r.Bank_Account_Name__c), 
ISBLANK(Person_Account__r.Bank_Account_Number__c),
ISBLANK(Person_Account__r.Bank_Name__c), 
ISBLANK(Person_Account__r.Bank_sort_code__c)
)
)
,
OR(
NOT(Bank_Account_Name__c =  Person_Account__r.Bank_Account_Name__c), 
NOT(Bank_Account_Number__c =  Person_Account__r.Bank_Account_Number__c), 
NOT(Bank_Name__c =  Person_Account__r.Bank_Name__c), 
NOT( Bank_Sort_Code__c =  Person_Account__r.Bank_sort_code__c)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different bank details</label>
    <type>Checkbox</type>
</CustomField>