force-app/main/default/objects/FF_Person_Account__c/fields/Different_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Different_Mobile__c</fullName>
    <description>This will be true if the new mobile number differs from the one held on the Person Account.</description>
    <formula>AND(
NOT(ISBLANK(Person_Account__c)),
Person_Account__r.Account_record_type_mimic__c = &quot;Person Account&quot;,
 Person_Account__r.FinServ__PrimaryContact__r.MobilePhone &lt;&gt; Mobile__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Different mobile</label>
    <type>Checkbox</type>
</CustomField>