force-app/main/default/objects/FF_Person_Account__c/fields/Discovery_Level_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Level_of_Risk__c</fullName>
    <label>Discovery Level of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A low risk investor</fullName>
            </value>
            <value>
                <fullName>A medium risk investor</fullName>
            </value>
            <value>
                <fullName>A high risk investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>