force-app/main/default/objects/FF_Person_Account__c/fields/Do_you_anticipate_any_changes_to_income__c.field-meta.xml
<CustomField>
    <fullName>Do_you_anticipate_any_changes_to_income__c</fullName>
    <label>Do you anticipate any changes to income?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>