force-app/main/default/objects/FF_Person_Account__c/fields/Do_you_have_any_connections_with_the_USA__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_any_connections_with_the_USA__c</fullName>
    <description>This will be &apos;Yes&apos; if the client does have connections with the USA, and &apos;No&apos; if they do not.</description>
    <label>Do you have any connections with the USA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>