force-app/main/default/objects/FF_Person_Account__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The client&apos;s email.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>