force-app/main/default/objects/FF_Person_Account__c/fields/Expected_Windfalls_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Expected_Windfalls_Inheritance__c</fullName>
    <description>Are there any expected windfalls or inheritance?</description>
    <label>Expected windfalls / inheritance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>