force-app/main/default/objects/FF_Person_Account__c/fields/FF_Session__c.field-meta.xml
<CustomField>
    <fullName>FF_Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FF Session</label>
    <referenceTo>FF_Session__c</referenceTo>
    <relationshipLabel>FF Person Accounts</relationshipLabel>
    <relationshipName>FF_Person_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>