force-app/main/default/objects/FF_Person_Account__c/fields/ff_session_external_id__c.field-meta.xml
<CustomField>
    <fullName>ff_session_external_id__c</fullName>
    <description>This is the external ID of the related FF Session record created by the client (External User Update).</description>
    <label>FF session external ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>