force-app/main/default/objects/FF_Person_Account__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>The client&apos;s first name.</description>
    <label>First name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>