force-app/main/default/objects/FF_Person_Account__c/fields/In_Good_Health__c.field-meta.xml
<CustomField>
    <fullName>In_Good_Health__c</fullName>
    <label>In Good Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>