force-app/main/default/objects/FF_Person_Account__c/fields/Is_Will_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Will_Up_to_Date__c</fullName>
    <label>Is Will Up to Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>