force-app/main/default/objects/FF_Person_Account__c/fields/ISA_Contributions_this_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>ISA_Contributions_this_Tax_Year__c</fullName>
    <label>ISA contributions this tax year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>