force-app/main/default/objects/FF_Person_Account__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Mapped to: Person Account - LastName</description>
    <label>Last name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>