force-app/main/default/objects/FF_Person_Account__c/fields/List_Connections_with_the_USA__c.field-meta.xml
<CustomField>
    <fullName>List_Connections_with_the_USA__c</fullName>
    <label>List Connections with the USA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Citizen</fullName>
            </value>
            <value>
                <fullName>Green Card Holder</fullName>
            </value>
            <value>
                <fullName>Pay Taxes in the US</fullName>
            </value>
            <value>
                <fullName>US Bank Account</fullName>
            </value>
            <value>
                <fullName>US Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>