force-app/main/default/objects/FF_Person_Account__c/fields/Losses_Realised_This_Tax_Year__c.field-meta.xml
<CustomField>
    <fullName>Losses_Realised_This_Tax_Year__c</fullName>
    <label>Losses Realised This Tax Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>