force-app/main/default/objects/FF_Person_Account__c/fields/LTA_Protection__c.field-meta.xml
<CustomField>
    <fullName>LTA_Protection__c</fullName>
    <label>LTA protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>