force-app/main/default/objects/FF_Person_Account__c/fields/LTA_Protection_Type__c.field-meta.xml
<CustomField>
    <fullName>LTA_Protection_Type__c</fullName>
    <label>LTA protection type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Protection</fullName>
            </value>
            <value>
                <fullName>Enhanced Protection</fullName>
            </value>
            <value>
                <fullName>Fixed Protection 2012 (£1.8m)</fullName>
            </value>
            <value>
                <fullName>Fixed Protection 2014 (£1.5m)</fullName>
            </value>
            <value>
                <fullName>Fixed Protection 2016 (£1.25m)</fullName>
            </value>
            <value>
                <fullName>Individual Protection 2014</fullName>
            </value>
            <value>
                <fullName>Individual Protection 2016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>