force-app/main/default/objects/FF_Person_Account__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <label>Marital status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Cohabiting</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Civil Partnership</fullName>
            </value>
            <value>
                <fullName>Married &amp; Separated</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
                <isActive>false</isActive>
                <label>Domestic Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>