force-app/main/default/objects/FF_Person_Account__c/fields/Match_id__c.field-meta.xml
<CustomField>
    <fullName>Match_id__c</fullName>
    <description>This is the ID to check what the latest record is with this match ID.</description>
    <label>Match ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>