force-app/main/default/objects/FF_Person_Account__c/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <label>Medical conditions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>