force-app/main/default/objects/FF_Person_Account__c/fields/Middle_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_s__c</fullName>
    <label>Middle name(s)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>