force-app/main/default/objects/FF_Person_Account__c/fields/National_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>National_Insurance_Number__c</fullName>
    <description>Mapped to: Person Account - National_Insurance_Number__pc</description>
    <label>National insurance number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>