force-app/main/default/objects/FF_Person_Account__c/fields/Other_Investments__c.field-meta.xml
<CustomField>
    <fullName>Other_Investments__c</fullName>
    <label>Other investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>