force-app/main/default/objects/FF_Person_Account__c/fields/OW_country_of_birth__c.field-meta.xml
<CustomField>
    <fullName>OW_country_of_birth__c</fullName>
    <description>Captures the country of birth as part of our AML and KYC responsibilities. Values on the FF object map to the FinServ__CountryOfBirth__pc field on the account object.</description>
    <label>Country of birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>