force-app/main/default/objects/FF_Person_Account__c/fields/OW_non_essential_spending_frequency__c.field-meta.xml
<CustomField>
    <fullName>OW_non_essential_spending_frequency__c</fullName>
    <description>To give flexibility in how non-essential spending is captured, we allow the value to be specified with a choice of frequency. Maps to the field of the same name on the account object. Maps to the field of the same name on the account object.</description>
    <label>Non-essential spending frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>