force-app/main/default/objects/FF_Person_Account__c/fields/OW_total_value_of_contents__c.field-meta.xml
<CustomField>
    <fullName>OW_total_value_of_contents__c</fullName>
    <description>At a household level, we capture the total value of contents to help with protection recommendations and inheritance tax planning. Maps to the field of the same name on the account object.</description>
    <label>Total value of contents</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>