force-app/main/default/objects/FF_Person_Account__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account that this FF record relates to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FF Person Accounts (Person Account)</relationshipLabel>
    <relationshipName>FF_Person_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>