force-app/main/default/objects/FF_Person_Account__c/fields/Power_of_Attorney_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_in_Place__c</fullName>
    <inlineHelpText>They have given power to someone else</inlineHelpText>
    <label>Power of Attorney in Place</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>