force-app/main/default/objects/FF_Person_Account__c/fields/Power_of_Attorney_Types__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_Types__c</fullName>
    <label>Power of Attorney Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Power_of_Attorney</valueSetName>
    </valueSet>
</CustomField>