force-app/main/default/objects/FF_Person_Account__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>