force-app/main/default/objects/FF_Person_Account__c/fields/Realised_Gains__c.field-meta.xml
<CustomField>
    <fullName>Realised_Gains__c</fullName>
    <label>Gains realised this tax year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>