force-app/main/default/objects/FF_Person_Account__c/fields/Recent_Windfalls_Inheritance__c.field-meta.xml
<CustomField>
    <fullName>Recent_Windfalls_Inheritance__c</fullName>
    <inlineHelpText>Inc Inheritance</inlineHelpText>
    <label>Recent Windfalls/ Inheritance</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>