force-app/main/default/objects/FF_Person_Account__c/fields/Retirement_Target__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Target__c</fullName>
    <label>Retirement Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>